<?xml version="1.0"?>
<package>
  <name>rostune</name>
  <version>1.0.1</version>
  <description> rostune is a tool that helps ROS developers distribute their nodes in the most effective way. It collects statistics for topics and nodes, such as CPU and network usage. </description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/jaguar_robot</url>
  <url type="repository">https://github.com/roboskel/rostune</url>
  <url type="bugtracker">https://github.com/roboskel/rostue/issues</url>
  
  <author email="gstavrinos@iit.demokritos.gr">George Stavrinos</author>
  <author email="konstant@iit.demokritos.gr">Stasinos Konstantopoulos</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
