<?xml version="1.0"?>
<package>
  <name>rostune</name>
  <version>1.0.5</version>
  <description> rostune is a tool that helps ROS developers distribute their nodes in the most effective way. It collects statistics for topics and nodes, such as CPU and network usage. </description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rostune</url>
  <url type="repository">https://github.com/roboskel/rostune</url>
  <url type="bugtracker">https://github.com/roboskel/rostue/issues</url>
  
  <author email="gstavrinos@iit.demokritos.gr">George Stavrinos</author>
  <author email="konstant@iit.demokritos.gr">Stasinos Konstantopoulos</author>


  <!--   <run_depend>message_runtime</run_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>topic_tools</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
 
  <run_depend>topic_tools</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
